[tool.poetry]
name = "repl-nix-myproject1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_myproject1"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-wtf = "^1.2.1"
wtforms = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
